fixed saving data from mosquito data topic